src/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');

html, body {
    overflow-x: hidden;
    max-width: 100%;
}

body {
    margin: 0;
    padding: 0;
    text-align: center;
    font-family: 'Poppins';
    font-size: 18px;
}

header {
    display: flex;
    width: 80%;
    margin: auto;
    padding: 25px;
}

header div.menu {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    position: absolute;
    top: 80px;
    width: 80%;
    height: 360px;
    background-color:hsl(257, 27%, 26%);
    border-radius: 10px;
}

.hidden {
    display: none;
}

header div.menu button#login {
    border: none;
    background: none;
    color: white;
    font-size: large;
    font-family:Poppins;
    font-weight: bold;
}

header div.menu button#signup {
    border: none;
    background: hsl(180, 66%, 49%);
    padding: 10px;
    width: 90%;
    border-radius: 100px;
    color: white;
    font-size: large;
    font-family:Poppins;
    font-weight: bold;
}

header div.menu hr {
    width: 90%;
    border: none;
    color: gray;
    background-color: gray;
    height: 1px;
}

header img {
    height: 30px;
    align-self: center;
}

header ul {
    height: 90%;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    margin: 0;
    padding: 0;
}

header ul li {
    list-style: none;
    width: 100%;
}

header ul li a {
    text-decoration: none;
    font-weight: bold;
}

header ul li a:visited {
    color: white;
}

header span {
    width: 40px;
    height: 40px;
    display: flex;
    margin-left: auto;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

header span:hover {
    cursor: pointer;
}

header span div {
    width: 70%;
    height: 5px;
    margin: 2px;
    background-color: gray;
    border-radius: 5px;
}

img#working {
    margin-left: 5%;
    width: 140%;
}

h1 {
    width: 80%;
    margin: auto;
    margin-top: 10px;
    font-weight: 700;
}

p {
    width: 90%;
    margin: auto;
    margin-top: 10px;
    color: gray;
    font-weight: 500;
}

button.getstarted {
    margin-top: 30px;
    height: 50px;
    width: 180px;
    color: white;
    background-color: hsl(180, 66%, 49%);
    border: none;
    border-radius: 50px;
    font-family: Poppins;
    font-weight: bold;
    font-size: large;
}

div#gray {
    margin-top: 150px;
    height: 100%;
    background-color: hsl(0, 0%, 90%);
    padding-bottom: 80px;
}

div#shortendiv {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 90%;
    margin: auto;
    height: 160px;
    border-radius: 10px;
    background-color: hsl(257, 27%, 26%);
    background-image: url('images/bg-shorten-mobile.svg');
    background-size: cover;
    transform: translate(0, -50%);
}

div#shortendiv  {
    width: 90%;
}

div#shortendiv input {
    width: 75%;
    height: 25px;
    border: none;
    border-radius: 5px;
    font-family: Poppins;
    padding: 8px;
}

div#shortendiv input:focus {
    outline: none;
}

input:not(:focus):invalid {
    outline: 3px solid hsl(0, 87%, 67%);
}

input.invalid {
    outline: 3px solid hsl(0, 87%, 67%);
}

div#shortendiv  button#shortentrigger {
    height: 40px;
    width: 80%;
    border: none;
    border-radius: 5px;
    font-family: Poppins;
    font-weight: bold;
    font-size: large;
    color: white;
    background-color: hsl(180, 66%, 49%);
}

div#shortendiv  p.shown {
    width: 80%;
    visibility: visible;
    color: hsl(0, 87%, 67%);
    font-size: 15px;
    font-style:italic;
    margin: 0;
    padding: 0;
    text-align: left;
}

p.vhidden {
    width: 80%;
    visibility: hidden;
    color: hsl(0, 87%, 67%);
    font-size: 15px;
    font-style:italic;
    margin: 0;
    padding: 0;
    text-align: left;
}

div.previous {
    text-align: left;
    margin-top: 10px;
    width: 90%;
    margin: auto;
    height: 140px;
    border-radius: 5px;
    background-color: white;
    transform: translate(0, -50%);
}

div.previous p:first-child {
    padding-top: 10px;
    color: black;
}

div.previous p:nth-child(3) {
    color: hsl(180, 66%, 49%);
}

div.previous hr {
    width: 100%;
    border: none;
    color: lightgray;
    background-color: lightgray;
    height: 1px;
}

div.previous button.copy {
    height: 35px;
    width: 90%;
    margin-left: 5%;
    margin-top: 10px;
    border: none;
    border-radius: 5px;
    font-family: Poppins;
    font-weight: bold;
    font-size: large;
    color: white;
    background-color: hsl(180, 66%, 49%);
}

div.box {
    width: 90%;
    margin: auto;
    background-color: white;
    border-radius: 5px;
}

div.first {
    margin-top: 100px;
}

div.imgwrapper {
    position: absolute;
    left: 50%;
    transform: translate(-50%, -50%);
    display: flex;
    align-items: center;
    justify-content: center;
    width: 80px;
    height: 80px;
    margin: auto;
    border-radius: 50%;
    background-color: hsl(257, 27%, 26%);
}

div.imgwrapper img {
    width: 50%;
    height: 50%;
}

div.box h3 {
    padding-top: 60px;
}

div.box p {
    padding-bottom: 20px;
}

div.connect {
    height: 100px;
    margin: auto;
    width: 5px;
    background-color:hsl(180, 66%, 49%);
}

div#boost {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: hsl(257, 27%, 26%);
    width: 100%;
    height: 250px;
    background-image: url('images/bg-boost-mobile.svg');
}

div#boost h2 {
    color: white;
}

div#boost button.getstarted {
    margin: 0;
}

footer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: hsl(260, 8%, 14%);
    padding-bottom: 30px;
}

footer img {
    filter:brightness(100);
    margin-top: 50px;
}

footer h4 {
    font-weight:normal;
    color: white;
}

footer ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

footer ul li {
    padding: 5px;
}

footer ul li a {
    text-decoration: none;
}

footer ul li a:visited {
    color: gray;
}

footer div#social {
    width: 100%;
}

footer div#social img {
    padding: 10px;
}

